--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <button class="tablink" onclick="openPage('Home', this, 'red')">Home</button>
-<button class="tablink" onclick="openPage('Users, this, 'green')" >Users</button>
-<button class="tablink" onclick="openPage('Contact', this, 'blue')">Contact</button>
-<button class="tablink" onclick="openPage('About', this, 'orange')">About</button>
+  <center>
+    <a href="/about">About</a>
+    <a></a>
+    <a></a>
+    <a href="/users">User Management</a>
+    </center>
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
